--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: '20.x'
 
       - name: Install dependencies
         run: npm install
@@ -28,4 +28,4 @@ jobs:
         run: npm test
 
       - name: Build project
-        run: npm run build
+        run: npm run build --prod
