--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,10 @@ jobs:
       - name: Checkout the source code
         uses: actions/checkout@v3
 
-      - name: Setup Node.js $
+      - name: Setup Node.js 20
         uses: actions/setup-node@v3
         with:
-          node-version: $
+          node-version: 20
           cache: 'npm'
           cache-dependency-path: package-lock.json
 
